<resources>
    <string name="app_name">Pullman</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="prompt_username">User</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
