<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".register.RegisterActivity"
    android:background="@color/black">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_only"/>

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_transparent_white"
                android:hint="@string/prompt_username"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="5dp"/>

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_transparent_white"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="5dp"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_transparent_white"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="5dp"/>

            <Button
                android:id="@+id/register_submit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/btn_gold"/>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/white"
                    android:text="Sudah punya akun ? "/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:text="Login"/>

            </android.support.v7.widget.LinearLayoutCompat>


        </LinearLayout>
    </ScrollView>
</LinearLayout>